force-app/main/default/objects/Potential_Site__c/Potential_Site__c.object-meta.xml
<CustomObject>
    <description>Store locations</description>
    <label>Potential Site</label>
    <nameField>
        <displayFormat>SITE-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>