force-app/main/default/objects/Potential_Site__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the Potential Site (Created for Agentforce Hackathon 2026 - Retail &amp; Consumer Goods Use Case)</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>