force-app/main/default/objects/Potential_Site__c/fields/Blind_Spot_Calc__c.field-meta.xml
<CustomField>
    <fullName>Blind_Spot_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blind Spot Calc</label>
    <type>Checkbox</type>
</CustomField>