force-app/main/default/objects/Potential_Site__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp Field Query</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>Data Cloud Import</fullName>
            </value>
            <value>
                <fullName>API Feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>