force-app/main/default/objects/Potential_Site__c/fields/Demand_Score__c.field-meta.xml
<CustomField>
    <fullName>Demand_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demand Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>