force-app/main/default/objects/Potential_Site__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(Address__Street__s)), Address__Street__s &amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(Address__City__s)), Address__City__s &amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(TEXT(Address__StateCode__s))), TEXT(Address__StateCode__s) &amp; &quot; &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(Address__PostalCode__s)), Address__PostalCode__s &amp; &quot;, &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(TEXT(Address__CountryCode__s))), TEXT(Address__CountryCode__s), &quot;&quot;)</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>