force-app/main/default/objects/Potential_Site__c/fields/PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>PIN_Code__c</fullName>
    <externalId>true</externalId>
    <label>PIN Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>