force-app/main/default/objects/Potential_Site__c/fields/Site_Score_Card__c.field-meta.xml
<CustomField>
    <fullName>Site_Score_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Score Card</label>
    <referenceTo>Site_Score__c</referenceTo>
    <relationshipLabel>Potential Sites</relationshipLabel>
    <relationshipName>Potential_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>