force-app/main/default/objects/Potential_Site__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>User who created or submitted the site record</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Potential_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>