force-app/main/default/objects/Potential_Site__c/validationRules/Lat_Long_Required_When_WhatsApp.validationRule-meta.xml
<ValidationRule>
    <fullName>Lat_Long_Required_When_WhatsApp</fullName>
    <active>false</active>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Data_Source__c, &quot;WhatsApp Field Query&quot;),
  OR(ISBLANK(Address__Latitude__s), ISBLANK( Address__Longitude__s ))
)</errorConditionFormula>
    <errorMessage>GPS coordinates are required for WhatsApp field queries.</errorMessage>
</ValidationRule>