force-app/main/default/objects/Potential_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Address__Street__s</columns>
    <columns>Address__City__s</columns>
    <columns>Demand_Score__c</columns>
    <columns>PIN_Code__c</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Site_Status__c</columns>
    <columns>Site_Score_Card__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>